# unified-journey

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.en.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: __init__.py
app/lib/: __init__.py  db.py  queries.py
dbt/: dbt_project.yml  profiles.yml.example
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: _marts__models.yml  dim_channels.sql  dim_dates.sql  dim_users.sql  fct_conversions.sql  fct_funnel_steps.sql  fct_sessions.sql  fct_touchpoints.sql
dbt/models/staging/: _sources.yml  _staging__models.yml  (+5 more)
dbt/seeds/: dim_channels_seed.csv
dbt/tests/: assert_attribution_weights_sum_to_one.sql  assert_funnel_monotonic_decay.sql  assert_identity_graph_no_orphans.sql
docker/streamlit/: Dockerfile
docs/: architecture.md  attribution_models.md  data_sources.md  governance_gdpr.md  identity_resolution.md  observability.md
ingestion/: __init__.py  config.py  main.py  observability.py  record_run.py
ingestion/email/: extractor.py
ingestion/ga4/: extractor.py
ingestion/gdpr/: forget.py
ingestion/meta/: extractor.py
ingestion/shopify/: extractor.py
ingestion/utils/: __init__.py  parquet_writer.py  s3.py
orchestration/flows/: 00_full_pipeline.yaml  01_ingest_all.yaml  02_transform_dbt.yaml  03_quality_checks.yaml
quality/soda/: checks.yml  configuration.yml
scripts/: benchmark.py  capture_assets.py
seed/: __init__.py  generate_sample_data.py
tests/integration/: test_pipeline_smoke.py
tests/unit/: test_attribution_weights.py  test_channel_mapping.py  test_config.py
warehouse/: .gitkeep
