[project]
name = "tessera"
version = "1.0.0"
description = "Warehouse-native customer journey unification pipeline (Composable CDP). MinIO + Parquet + DuckDB + Kestra + dbt + Soda + Streamlit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "All Rights Reserved" }
authors = [
    { name = "Lohana Utim", email = "lohanautim@gmail.com" },
]
keywords = ["data-engineering", "cdp", "identity-resolution", "attribution", "dbt", "duckdb", "parquet", "lakehouse"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*", "app*"]
exclude = ["tests*", "docs*", "dbt*", "orchestration*", "infra*", "quality*", "seed*", "warehouse*"]

# ---------------- Ruff ----------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["dbt/target", "dbt/dbt_packages"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line length - handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------- Pytest ----------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"

# ---------------- MyPy ----------------
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
